# cata_club

./: .env.example  .env.local.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  vitest.config.ts
.engram/: config.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0756dd06d542_merge_alumno_horario_y_observaciones_.py  0b9a2e1f4c5d_agregar_tesorero_al_enum_tiporol.py  8dd0e8f51af9_remover_prioridad_municipal_y_beca.py  9a8b7c6d5e4f_merge_b7f3_y_a3b4_heads.py  a3b4c5d6e7f8_agregar_vencimiento_a_tiponotificacion.py  b2c3d4e5f6a7_alumno_horario_asignacion_directa.py  b7f3c1a9d2e4_add_categoria_horario_entrenamiento.py  c4d5e6f7a8b9_independizar_horario_y_nivel_ranking.py  (+6 more)
backend/scripts/: seed_dev_admin.py  seed_dev_base.py  seed_dev_bulk.py  seed_dev_trainer.py
backend/tests/: conftest.py  test_asistencias.py  test_autenticacion_endpoints.py  test_auth_perfil_propio.py  test_auth_registro_refresh.py  test_categoria_metadata.py  test_chatbot.py  test_clases_extra.py  test_enrollment_servicio.py  test_gaps_e01_e04.py  test_geografia.py  test_horario_categoria.py  test_horario_repositorio.py  test_membresias_pagos.py  test_migracion_categoria_horario.py  test_notificaciones.py  test_permisos.py  test_personas.py  test_ranking.py  test_reportes.py  test_seed_dev_base.py  test_seed_dev_bulk.py  test_tesoreria.py  test_vencimientos_tareas.py
(+593 files in other folders)
