[project]
name = "product-admin-backend"
version = "1.2.0"
description = "API Cata Club - Sistema Integral de Administración (UNL - Diseño de Software)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",  # passlib 1.7.4 no soporta la API de bcrypt>=4.1 (rompe el hashing en runtime)
    "python-multipart>=0.0.12",
    # --- Automatizaciones (Celery + Redis + Beat) ---
    "celery>=5.4.0",
    "redis>=5.1.0",
    # --- Generación de PDFs en memoria ---
    "reportlab>=4.2.0",
    # --- Almacenamiento de archivos en la nube ---
    "cloudinary>=1.41.0",
    # --- Rate limiting ---
    "slowapi>=0.1.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
